refactor: изменил структуру папок в пакете handler